--- a/wrap_for_py/wrap_for_py.vcproj
+++ b/wrap_for_py/wrap_for_py.vcproj
@@ -40,7 +40,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="D:\boost\boost_1_46_1;ISO8583/;C:\Python27\include"
+				AdditionalIncludeDirectories="D:\boost\boost_1_46_1;ISO8583/"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -58,9 +58,8 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="python27.lib"
-				OutputFile="$(OutDir)\$(ProjectName).pyd"
-				AdditionalLibraryDirectories="C:\Python27\libs;D:\boost\boost_1_46_1\bin.v2\libs\python\build\msvc-9.0"
+				AdditionalDependencies="libboost_python-vc90-mt-gd-1_46_1.lib"
+				AdditionalLibraryDirectories="&quot;D:\boost\boost_1_46_1\bin.v2\libs\python\build\msvc-9.0\debug\link-static\threading-multi&quot;"
 				GenerateDebugInformation="true"
 				TargetMachine="1"
 			/>
@@ -177,20 +176,8 @@
 				>
 			</File>
 			<File
-				RelativePath=".\pyt.cpp"
-				>
-			</File>
-			<File
 				RelativePath=".\wMain.cpp"
 				>
-				<FileConfiguration
-					Name="Debug|Win32"
-					ExcludedFromBuild="true"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-					/>
-				</FileConfiguration>
 			</File>
 		</Filter>
 		<Filter
