--- a/client_test/client_test.ini
+++ b/client_test/client_test.ini
@@ -10,6 +10,7 @@ timeout=60
 
 
 [pe22]
+
 demo = "银行卡余额查询"
 bit0 = 0100
 bit2 = 7777769257970742
@@ -48,3 +49,9 @@ bit61 = 000000000000000
 bit62 = P
 bit63 = 0000000012640557719803126405577198030002610800000000010
 bit64 = 0000000000000000
+
+[pe]
+demo	= "服务测试"
+type	= ISO8583/PACBODY
+header	= 0
+
