完成client端，添加server端的代码
Signed-off-by: Sunday <sun@chengcheng.info>

--- a/client_test/client_test.ini
+++ b/client_test/client_test.ini
@@ -3,11 +3,15 @@ pause=1
 circle=1000
 log=1
 
-[serv]
+[serv12]
 ip=132.97.117.84
 port=4100
 timeout=60
 
+[serv]
+ip=127.0.0.1
+port=4100
+timeout=60
 
 [pe22]
 
@@ -30,7 +34,7 @@ bit62 = P
 bit63 = 0000000012640557719803126405577198030002610800000000010
 bit64 = 0000000000000000
 
-[pe]
+[pe1234123123123]
 demo = "消费"
 bit0 = 0200
 bit2 = 7777769257970742
@@ -52,6 +56,22 @@ bit64 = 0000000000000000
 
 [pe]
 demo	= "服务测试"
-type	= ISO8583/PACBODY
-header	= 0
+type	= PACBODY
+header	= llll
+bit0	= 0200
+bit1	= 7777769257970742
+bit2	= 000000
+bit3	= 000000000001
+bit4	= %YYYYMMDD%
+bit5	= %hhmmss%
+bit6	= %####%
+bit7	= %####%
+bit8	= 40551210
+bit9	= 510111115101111
+bit10	= 037920
+bit11	= 037920037920
+bit12	= 1BD5
+bit13	= 12345678
+bit14	= 00000000
+bit15	= 1
 
