添加状态查询请求测试。
Signed-off-by: Sunday <sun@chengcheng.info>

--- a/client_test/client_test.ini
+++ b/client_test/client_test.ini
@@ -8,9 +8,14 @@ ip=132.97.117.84
 port=4100
 timeout=60
 
-[serv]
+[serv_]
 ip=127.0.0.1
 port=4100
+timeout=60
+
+[serv]
+ip=132.97.117.121
+port=7081
 timeout=60
 
 [pe22]
@@ -55,23 +60,16 @@ bit63 = 0000000012640557719803126405577198030002610800000000010
 bit64 = 0000000000000000
 
 [pe]
-demo	= "服务测试"
+demo	= "统一充值缴费状态查询请求"
 type	= PACBODY
+def	= FA_PKT_HEAD
 header	= llll
-bit0	= 0200
-bit1	= 7777769257970742
-bit2	= 000000
-bit3	= 000000000001
-bit4	= %YYYYMMDD%
-bit5	= %hhmmss%
-bit6	= %####%
-bit7	= %####%
-bit8	= 40551210
-bit9	= 510111115101111
-bit10	= 037920
-bit11	= 037920037920
-bit12	= 1BD5
-bit13	= 12345678
-bit14	= 00000000
-bit15	= 1
+bit0	= 0100
+bit1	= %############%
+bit2	= 0407
+bit3	= 123456
+bit4	= 789012
+bit5	= 0123
+bit6	= 1
+bit7	= 13752841025
 
