重新修改了Eclipse的管理方式，还不是很完善！
Signed-off-by: Sunday <sun@chengcheng.info>

--- a/client_test/client_test.ini
+++ b/client_test/client_test.ini
@@ -63,7 +63,7 @@ bit64 = 0000000000000000
 demo	= "统一充值缴费状态查询请求"
 type	= PACBODY
 def	= FA_PKT_HEAD
-header	= llll
+header	= LLLL
 bit0	= 0100
 bit1	= %############%
 bit2	= 0407
@@ -71,5 +71,10 @@ bit3	= 123456
 bit4	= 789012
 bit5	= 0123
 bit6	= 1
-bit7	= 13752841025
+bit7	= "13752841025         "
+bit8	= 548452851
+RET0	= 1234
+RET1	= 123456789012
+RET2	= 12
+RET3	= 1234567890123456789012345678901234567890
 
