--- a/python/cryptor/.project
+++ b/python/cryptor/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Cryptor</name>
+	<name>cryptor</name>
 	<comment></comment>
 	<projects>
 	</projects>
